[package]
name = "rust-programming-fundamentals"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "a1_temperature_converter"
path = "src/bin/a1_temperature_converter.rs"

[[bin]]
name = "a2_palindrome_checker"
path = "src/bin/a2_palindrome_checker.rs"

[[bin]]
name = "a3_word_frequency_finder"
path = "src/bin/a3_word_frequency_finder.rs"

[dependencies]
